[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "amidisk"
version = "0.1.0"
description = "Read/write access to Amiga HDF/VHD disk images: RDB partitions and OFS/FFS filesystems"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
amidisk = "amidisk.cli:main"
amidisk-sync = "amidisk.sync:main"

[tool.setuptools.packages.find]
include = ["amidisk*"]
